attempt to fix white space issue, added row padding/margin 0

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ body {
   text-transform: uppercase;
 }
 
+.row {
+  padding-right: 0px;
+  margin-right: 0px;
+}
+
 .container {
   padding: 0 40px;
 }
